Fix admissions page timeline item alignments and unwrap AdmissionsForm container to fix squished layout

--- a/src/pages/Admissions.module.scss
+++ b/src/pages/Admissions.module.scss
@@ -136,6 +136,8 @@
   max-width: 900px;
   margin: 0 auto;
   padding: 20px 0;
+  display: flex;
+  flex-direction: column;
 
   &::before {
     content: '';
